@@ -3,8 +3,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="main.js"></script>
     <link type="text/css" rel="stylesheet" href="experiments.css" />
+    <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="canvas-container"></div>
+    <div id="ui-container"></div>
+
     <a id="version"></a>
     <script src="version.js"></script>
   </body>
